Refactor AnswerDao and related tests